# 2JZ-GTE-Predictive-Monitoring-System

./: .dockerignor  .dockerignore  CLA.md  Dockerfile  MIT_license.txt  Mobile Deployment  Pi Setup  QUICK START GUIDE.txt  README-DOCKER.md  README.md  SECURITY.md  conda-package.yml  conda.yml  docker-compose.yml  dockerfile  environment.yml  legal_documentation.md  liability_waiver.md  pyproject.toml  pytest.ini  quickstart.sh  read me.md  requirements.txt  run_all.sh  run_with_tf.py  setup.cfg  stop_all.sh
.github/: FUNDING.yml
.github/workflows/: backend-ci.yml  build-executables.yml  ci.yml  conda-package.yml  conda.yml
2JZ-GTE Turbo Monitoring System/: README.md  requirements.txt  setup_and_run.sh
2JZ-GTE Turbo Monitoring System/src/turbo_monitor/: core.py  dashboard.py
NeuraLinkTech/: Desktop Mode (PERFORMANCE INTENSIVE)
backend/: .env.example  README.md  __init__.py  app.py  can_interface.py  config.py  ingestion_manager.py  live_prediction.py  logger.py  model_handler.py  preprocess.py  requirements.txt  socket_server.py  test_main.py  tf_server.py
backend/api/: hardware_status.py
backend/api/routes/: status.py
backend/can/: ingestion.py
backend/inference/: predict.py
backend/ingestion/: __init__.py  hardware_ingestor.py  simulated_ingestor.py
backend/model/: __init__.py  predictor.py  train_model.py  validate_model.py
backend/obd/: __init__.py  can_reader.py  ingestion.py  obd_connector.py
backend/routes/: __init__.py  api_routes.py
backend/schemas/: input_schema.py
backend/status/: status_flags.py
backend/utils/: io_utils.py  preprocessing.py
backend/validation/: schemas.py
data/: engine_data.csv
frontend/: README.md  app.js  index.htm  index.html  styles.css
frontend/css/: styles.css
frontend/js/: chart-config.js  main.js
integrations/tensorflow/: requirements.txt  tf_predictor.py
integrations/transformer_model_integration/: README.md  app.py  data_preparation.py  train_transformer.py
integrations/transformer_model_integration/model/: transformer_model.py
integrations/transformer_model_integration/static/: script.js
logs/:  (directory)
model/: data_monitor.py  retrain.py  sklearn_model.pkl
model/tf_model/: generate_tf_model.py  saved_model.pb
test/: test_socket_stream.py
tests/: test_model.py
