[metadata]
name = 2JZ-GTE-Predictive-Monitoring-System
version = 0.1.0
description = Real-time engine monitoring and predictive analytics for the Toyota 2JZ-GTE turbocharged engine
author = H. Pandit
license = MIT

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    pandas
    numpy
    matplotlib
    tensorflow
    scikit-learn
    dash
    plotly
    obd
    joblib