[metadata]
name = 2jzgte_predictive_monitoring
version = 0.1.0
author = H. Pandit
author_email = mykehaunt@protonmail.com
description = Predictive fault detection system for Toyota 2JZ-GTE engines
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
url = https://github.com/MykeHaunt/2JZ-GTE-Predictive-Monitoring-System

[options]
packages = find:
python_requires = >=3.8
install_requires =
    flask>=2.2
    pandas
    numpy
    scikit-learn
    matplotlib
    seaborn
    joblib
    gunicorn
    python-dotenv

[options.extras_require]
dev =
    black
    flake8
    isort
    pytest